--- a/sleep.html
+++ b/sleep.html
@@ -8,6 +8,7 @@ description: Collected sleep data as of February 18th, 2012
 <p>This is my collected sleep data over the last couple months.  I will update this data as often as I can.  Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a particularly accurate depiction of my sleep, the theory is that one moves less in deep sleep, due to sleep paralysis.</p>
 <p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's the <a href="/sleepdata/sleep-export-18feb2012.csv">[current data export]</a></p>
 
+<h3>Summary</h3>
 
 <img src="/sleepdata/1329619124435.png" width="55%" height="55%">
 <br />
