working on fixing image links

--- a/me.html
+++ b/me.html
@@ -10,5 +10,5 @@ title: about me
 tfolio.  Topics will drift and be both spaced and frequent.</p>
         <a href="http://about.me/lucascharles" target="_blank">About.me</a>
         <br />
-        <a href="www.twitter.com/theoretick" target="_blank">@Theoretick</a>
+        <a href="http://twitter.com/theoretick" target="_blank">@Theoretick</a>
 </div>
