--- a/categor.html
+++ b/categor.html
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: categories
 ---
 
 {% for category in site.categories %}
@@ -7,3 +8,4 @@ layout: post
 <li><a href="/categories/{{ category[0] }}.html">{{category[0] }}</a></li>
 
 {% endfor %}
+
