--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ layout: default
 
 <title>Limitless Channels</title>
 <br />
-<h2>latest</h2>
+<h2>recent:</h2>
 
 <div class="latest">
 {% assign posts = site.posts %}
 {% assign listing_limit = 7 %}
 {% include post-listing-index.html %}
 </div>
+
 
