--- a/me.html
+++ b/me.html
@@ -5,8 +5,8 @@ title: about me
 <div id="content">
         <h2>about me</h2>
         <p>I do stuff and things.</p>
-        <p>For now this blog is really just a repository for my own link storage, random thoughts, and attempt to build up a more concrete online presence/por
-tfolio.  Topics will drift and be both spaced and frequent.</p>
+        <p>For now this site is really just a repository for my own link storage, random thoughts, and attempt to build up a more concrete online presence/por
+tfolio.  Topics will drift and be both spaced and frequent.  This is not a blog.  Just about every page will be in perpetual development, so you may find broken things, incomplete things, and meanderings. True understanding requires constant revision, and so will these topics.</p>
         <a href="http://about.me/lucascharles" target="_blank">About.me</a>
         <br />
         <a href="http://twitter.com/theoretick" target="_blank">@Theoretick</a>
