--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
     <li>
             <a href="{{ post.url }}">{{ post.title }}</a>
             <span>({{ post.date | date:"%d%b%Y" }})</span>
-	    <span>in: {{post.categories}}</span>
+	    <span>in: <a href="/{{post.categories}}">{{post.categories}}</a></span>
     </li>
     <blockquote><em>{{ post.content | truncatewords: 35 }} </em></blockquote>
     <br />
