--- a/neuroscience/index.html
+++ b/neuroscience/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
+title: category::neuroscience
 ---
-
-<title>category:language</title>
-<br />
 
 <div class="latest">
 {% assign posts = site.categories.neuroscience %}
