--- a/quotes/index.html
+++ b/quotes/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: category::site
+title: category::quotes
 ---
 
 <div class="latest">
-{% assign posts = site.categories.site %}
+{% assign posts = site.categories.quotes %}
 {% include post-listing-index.html %}
 </div>
 
