--- a/archive.html
+++ b/archive.html
@@ -1,9 +1,7 @@
 ---
 layout: default
+title: archive
 ---
-
-<title>archive:</title>
-<br />
 
 <div class="latest">
 {% assign posts = site.posts %}
