--- a/journal/index.html
+++ b/journal/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: category::site
+title: category::journal
 ---
 
 <div class="latest">
-{% assign posts = site.categories.site %}
+{% assign posts = site.categories.journal %}
 {% include post-listing-index.html %}
 </div>
 
