--- a/language/index.html
+++ b/language/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
+title: category::language
 ---
-
-<title>category:language</title>
-<br />
 
 <div class="latest">
 {% assign posts = site.categories.language %}
