--- a/main/index.html
+++ b/main/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
+title: category::main
 ---
-
-<title>category:language</title>
-<br />
 
 <div class="latest">
 {% assign posts = site.categories.main %}
