--- a/reviews/index.html
+++ b/reviews/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
+title: category::reviews
 ---
-
-<title>category:language</title>
-<br />
 
 <div class="latest">
 {% assign posts = site.categories.reviews %}
