revamped a bunch of posts and added projects to sidebar

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@ layout: default
 <title>projects:</title>
 <br />
 
-<p>This is a list of my current projects<p>
+<p>This is a list of my current (ongoing) projects:<p>
 <ul>
 	<li><a href="#">Site Migration</a></li>
 	<li><a href="/sleep.html">Sleep</a></li>
