--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 layout: default
 ---
 
-<h2>recent:</h2>
-
-<ul class="posts">
+<ul id="recent">
 {% for post in site.posts limit: 3 %}
-  <div class="post_info">
+  <div>
     <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
+            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
             <span>({{ post.date | date:"%d%b%Y" }})</span>
-	    <span>in: <a href="/{{post.categories}}">{{post.categories}}</a></span>
+	    <span><a href="/{{post.categories}}">category::{{post.categories}}</a></span>
     </li>
     <blockquote><em>{{ post.content | truncatewords: 35 }} </em></blockquote>
     <br />
