added header to journal category page

--- a/journal/index.html
+++ b/journal/index.html
@@ -3,6 +3,8 @@ layout: default
 title: category::journal
 ---
 
+<p><em>This is a listing of my journal entries. These are stream-of-conscious and possibly incomprehensible. I rarely go back and re-edit thoughts but in my steps towards publicizing my musings, they will go in here.</p>
+
 <div class="latest">
 {% assign posts = site.categories.journal %}
 {% include post-listing-index.html %}
