more layout things fixed, revamped landing, too

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ layout: default
 {% for post in site.posts limit: 3 %}
   <div>
     <li>
-            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
             <span>({{ post.date | date:"%d%b%Y" }})</span>
 	    <span><a href="/{{post.categories}}">category::{{post.categories}}</a></span>
     </li>
-    <blockquote><em>{{ post.content | truncatewords: 35 }} </em></blockquote>
-    <br />
+    <blockquote><em>{{ post.content | truncatewords: 35 }} </em>
+    <a href="{{ post.url }}"> (more)</a></blockquote>
     </div>
   {% endfor %}
 
