--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     </div>
   {% endfor %}
 </ul>
-
+<h2>Latest Activty:</h2>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
 <script src="github.commits.widget-min.js"></script>
 <script>
