updated others page

--- a/others.html
+++ b/others.html
@@ -18,4 +18,9 @@ title: others
 
 <li><a href="http://mulderc.blogspot.com/">Mulderc</a></li>
 <p>Economics, thoughts, and meanderings</p>
+
+<li><a href="http://joannemcneil.com/">Joanne McNeil's personal blog</a></li>
+<p>Assorted writing and longform from former owner of The Tomorrow Museum</p>
+
+<li><a href="http://gwern.net">Gwern</a></li>
 </ul>
