--- a/sleep.html
+++ b/sleep.html
@@ -4,7 +4,7 @@ title: Sleep Data
 description: Collected sleep data as of March 1st, 2012
 ---
   
-<p><em>updated March 1st, 2012</em></p>
+<p><em>last updated March 1st, 2012</em></p>
 
 <p>This is my collected sleep data over the last couple months.  I will update this data as often as I can.  Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a particularly accurate depiction of my sleep, the theory is that one moves less in deep sleep, due to sleep paralysis.</p>
 <p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's the <a href="/sleepdata/sleep-export.csv">[current data export]</a></p>
