--- a/projects.html
+++ b/projects.html
@@ -3,12 +3,12 @@ layout: default
 title: projects
 ---
 
-<title>projects:</title>
+<title>projects</title>
 <br />
 
 <p>This is a list of my current (ongoing) projects:</p>
 <ul>
-	<li>Project Digital (<a href="http://quantifiedself.com">Quantified Self</a>)</li>
+	<li>Project Digital (Quantified Self)</li>
 	<li>Notetaking Migration</li>
 </ul> 
 
