fixed case on sp

--- a/me.html
+++ b/me.html
@@ -15,5 +15,5 @@ title: about me
 
 <a href="http://about.me/lucascharles" target="_blank">About.me</a>
 <br />
-<a href="http://twitter.com/theoretick" target="_blank">@Theoretick</a>
+<a href="http://twitter.com/theoretick" target="_blank">@theoretick</a>
 
