various link and minor formatting tweaks

--- a/popular.html
+++ b/popular.html
@@ -3,8 +3,8 @@ layout: default
 title: popular content
 ---
 
-<br >
-<h4>My most popular pages via analytics:</h4>
+<p><em>My most popular pages via analytics:</em></p>
+
 <ul>
 	<li><a href="/main/2011/8/10/android-n-back-app-comparison.html">Android N-Back App Comparison</a></li>
 	<li><a href="/main/2011/8/9/what-exactly-is-n-back.html">What Exactly is N-Back</a></li>
