--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@ layout: default
 title: projects
 ---
 
-<br >
-<h4>This is a list of my current (ongoing) projects:</h4>
+<p><em>A list of my current (ongoing) projects:</em></p>
+
 <ul>
 <li>Project Digital (<a href="http://quantifiedself.com">Quantified Self</a>)</li>
 <li>Notetaking Migration</li>
