--- a/writing/index.html
+++ b/writing/index.html
@@ -3,7 +3,7 @@ layout: default
 title: category::writing
 ---
 
-<p><em>This is a listing of my academic and other longform writing. Most are in what had been their final state.</p>
+<p><em>This is a listing of my academic and other longform writing. Most are in what had been their final state.</em></p>
 
 <div class="latest">
 {% assign posts = site.categories.writing %}
