--- a/others.html
+++ b/others.html
@@ -4,23 +4,24 @@ title: others
 ---
 
 <ul>
-<li><a href="http://mstrmnd.com/log/">Mstrmnd's blog</a></li>
+<li><a href="http://mstrmnd.com/log/">mstrmnd's blog</a></li>
 <p>films, philo, language, music</p>
 
-<li><a href="http://technoccult.net/">Technoccult</a></li>
+<li><a href="http://technoccult.net/">technoccult</a></li>
 <p>Weird Science, technology, and occult</p>
 
-<li><a href="http://lesswrong.com/">Less Wrong</a></li>
+<li><a href="http://lesswrong.com/">less wrong</a></li>
 <p>Community rationality blog</p>
 
-<li><a href="http://mindhacks.com/">Mind Hacks</a></li>
+<li><a href="http://mindhacks.com/">mind hacks</a></li>
 <p>Neuroscience, psychology, and zee mind</p>
 
-<li><a href="http://mulderc.blogspot.com/">Mulderc</a></li>
+<li><a href="http://mulderc.blogspot.com/">mulderc</a></li>
 <p>Economics, thoughts, and meanderings</p>
 
 <li><a href="http://joannemcneil.com/">Joanne McNeil's personal blog</a></li>
-<p>Assorted writing and longform from former owner of The Tomorrow Museum</p>
+<p>Assorted writing and longform from former owner of the Tomorrow Museum</p>
 
-<li><a href="http://gwern.net">Gwern</a></li>
+<li><a href="http://gwern.net">gwern</a></li>
+<p>Repository of sorts
 </ul>
