--- a/sleep.html
+++ b/sleep.html
@@ -1,16 +1,18 @@
 ---
 layout: default
-title: Sleep Data
-description: Collected sleep data as of March 1st, 2012
+title: Sleep Data Dec11 to Mar12
+description: Collected sleep data for period of December 2011 to March 2012
 ---
   
 <p><em>last updated March 1st, 2012</em></p>
 
-<p>This is my collected sleep data over the last couple months.  I will update this data as often as I can.  Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a particularly accurate depiction of my sleep, the theory is that one moves less in deep sleep, due to sleep paralysis.</p>
-<p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's the <a href="/sleepdata/sleep-export.csv">[current data export]</a></p>
+<p>My collected sleep data over the period of December 2011 to March 2012.</p>
+
+<p>Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a particularly accurate depiction of my sleep, the theory is that one moves less in deep sleep, due to sleep paralysis.</p>
+<p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's <a href="/sleepdata/sleep-export.csv">[a CSV of the current data export]</a>.</p>
 
 <h3>Summary</h3>
-
+<br />
 <img src="/sleepdata/summary.png" width="55%" height="55%">
 <br />
 <img src="/sleepdata/pattern-month.png" width="75%" height="75%">
