--- a/sleep.html
+++ b/sleep.html
@@ -9,7 +9,7 @@ description: Collected sleep data for period of December 2011 to March 2012
 <p>My collected sleep data over the period of December 2011 to March 2012.</p>
 
 <p>Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a particularly accurate depiction of my sleep, the theory is that one moves less in deep sleep, due to sleep paralysis.</p>
-<p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's <a href="/sleepdata/sleep-export.csv">[a CSV of the current data export]</a>.</p>
+<p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's <a href="/sleepdata/sleep-export.csv">a CSV of the current data export</a>.</p>
 
 <h3>Summary</h3>
 <br />
