fixed formatting for categories, moved sleepdata to storage, cleaned up a few old exported posts

--- a/sleep.html
+++ b/sleep.html
@@ -8,23 +8,23 @@ description: Collected sleep data for period of December 2011 to March 2012
 
 <p>My collected sleep data over the period of December 2011 to March 2012.</p>
 
-<p>Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a particularly accurate depiction of my sleep, the theory is that one moves less in deep sleep, due to sleep paralysis.</p>
-<p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's <a href="/sleepdata/sleep-export.csv">a CSV of the current data export</a>.</p>
+<p>Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a particularly accurate depiction of my sleep, <a href="http://en.wikipedia.org/wiki/Actigraphy">the theory</a> is that one moves less in deep sleep, due to sleep paralysis.</p>
+<p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's <a href="/storage/sleepdata/sleep-export.csv">a CSV of the current data export</a>.</p>
 
 <h3>Summary</h3>
 <br />
-<img src="/sleepdata/summary.png" width="55%" height="55%">
+<img src="/storage/sleepdata/summary.png" width="55%" height="55%">
 <br />
-<img src="/sleepdata/pattern-month.png" width="75%" height="75%">
+<img src="/storage/sleepdata/pattern-month.png" width="75%" height="75%">
 <br />
-<img src="/sleepdata/pattern-quarter.png" width="75%" height="75%">
+<img src="/storage/sleepdata/pattern-quarter.png" width="75%" height="75%">
 <br />
-<img src="/sleepdata/duration-month.png" width="75%" height="75%">
+<img src="/storage/sleepdata/duration-month.png" width="75%" height="75%">
 <br />
-<img src="/sleepdata/duration-quarter.png" width="75%" height="75%">
+<img src="/storage/sleepdata/duration-quarter.png" width="75%" height="75%">
 <br />
-<img src="/sleepdata/debt-month.png" width="75%" height="75%">
+<img src="/storage/sleepdata/debt-month.png" width="75%" height="75%">
 <br />
-<img src="/sleepdata/debt-quarter.png" width="75%" height="75%">
+<img src="/storage/sleepdata/debt-quarter.png" width="75%" height="75%">
 </div>
 
