--- a/journal/index.html
+++ b/journal/index.html
@@ -3,7 +3,7 @@ layout: default
 title: category::journal
 ---
 
-<p><em>This is a listing of my journal entries. These are stream-of-conscious and possibly incomprehensible. I rarely go back and re-edit thoughts but in my steps towards publicizing my musings, they will go in here.</p>
+<p><em>This is a listing of my journal entries. These are stream-of-conscious and possibly incomprehensible. I rarely go back and re-edit thoughts but in my steps towards publicizing my musings, they will go in here.</em></p>
 
 <div class="latest">
 {% assign posts = site.categories.journal %}
