--- a/notes/index.html
+++ b/notes/index.html
@@ -3,7 +3,7 @@ layout: default
 title: category::notes
 ---
 
-<p><em>This is a listing of my notes on various people and subjects.  I frequently update and re-edit these and will try and keep a header around with revision notes</p>
+<p><em>This is a listing of my notes on various people and subjects.  I frequently update and re-edit these and will try and keep a header around with revision notes</em></p>
 
 <div class="latest">
 {% assign posts = site.categories.notes %}
