cleaned up css, moved words around

--- a/popular.html
+++ b/popular.html
@@ -3,7 +3,7 @@ layout: default
 title: popular content
 ---
 
-<p><em>My most popular pages via analytics:</em></p>
+<p><em>Popular pages via analytics:</em></p>
 
 <ul>
 	<li><a href="/main/2011/8/10/android-n-back-app-comparison.html">Android N-Back App Comparison</a></li>
