me page format tweak

--- a/me.html
+++ b/me.html
@@ -13,7 +13,7 @@ title: about me
 
 <p>You can also feel free to contact me a bit more securely with <a href="http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0xFDF9A65FF1672B09">PGP.</a></p>
 
-<a href="http://about.me/lucascharles" target="_blank">About.me</a>
+<a href="http://about.me/lucascharles" target="_blank">about.me</a>
 <br />
 <a href="http://twitter.com/theoretick" target="_blank">@theoretick</a>
 
