--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 ---
 
 <ul id="recent">
-{% for post in site.posts limit: 3 %}
+{% for post in site.posts limit: 5 %}
   <div>
     <li>
             <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-            <span>{{ post.date | date:"%d%b%Y" }}</span>
+            <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ post.date | date:"%d%b%Y" }}</span>
 	    <span><a href="/{{post.categories}}">category::{{post.categories}}</a></span>
+	    <br />
     </li>
-    <blockquote><em>{{ post.content | truncatewords: 35 }} </em></blockquote>
   </div>
   {% endfor %}
 </ul>
