added a few page descriptions

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Occupy Portland Survey 2011
+description: collected raw data and survey analysis for political and demographic makeup of Occupy Portland 2011 encampment
 ---
 
 
