--- a/sleep.html
+++ b/sleep.html
@@ -4,7 +4,7 @@ title: Sleep Data Dec11 to Mar12
 description: Collected sleep data for period of December 2011 to March 2012
 ---
   
-<p><em>last updated March 1st, 2012</em></p>
+<p class="blockquote">last updated March 1st, 2012</p>
 
 <p>My collected sleep data over the period of December 2011 to March 2012.</p>
 
