posted draft for nicotine exp for review

--- a/sleep.html
+++ b/sleep.html
@@ -1,6 +1,10 @@
 ---
 layout: default
+category: experiments
 title: Sleep Data Dec11 to Mar12
+tags: 
+ - originalcontent
+ - experiments
 description: Collected sleep data for period of December 2011 to March 2012
 ---
   
