reformatted occupyposts and added two WIP experiments

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -1,11 +1,15 @@
 ---
 layout: default
 title: Occupy Portland Survey 2011
+category: experiments
+tags:
+ - experiments
+ - originalcontent
 description: collected raw data and survey analysis for political and demographic makeup of Occupy Portland 2011 encampment
 ---
 
 
-<p>On November 13th of 2011, I and several others[^foot] of Portland State University Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect 40-question survey samples from each of the participants.  Below is the accumulated data and report.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
+<p>On November 13th of 2011, I and several others[^1] of Portland State University Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect 40-question survey samples from each of the participants.  Below is the accumulated data and report.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
 <img url="http://a.abcnews.go.com/images/US/gty_occupy_portland_dawn_cc_111113_wg.jpg" />
 <p>Our initial survey was modeled after <a href="http://online.wsj.com/article/SB10001424052970204479504576637082965745362.html">a similar poll</a> conducted by Douglas E. Schoen of nearly 200 people at the Occupy Wallsteet encampment in Zuccotti Park, October 10th & 11th of 2011. <a href="/storage/OccupyPDXdata/SchoenOccupyWallStreetPoll.pdf" target="_blank">A summary of the report can be found here.</a>
 
@@ -623,4 +627,4 @@ TOTAL: 119
 
 <br />
 <br />
-[^foot]: Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong
+[^1]: Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong
