--- a/me.html
+++ b/me.html
@@ -3,6 +3,8 @@ layout: default
 title: about me
 ---
 
+<p><em>"first off. it doesn't reflect my daily life. Most of what happens hour by hour is quiet and still. We sit most of the time"</em> ~Dhalgren</p>
+
 <p>I do stuff and things.</p>
 
 <p>For now this site is really just a repository for my own link storage, random thoughts, and attempt to build up a more concrete online presence/portfolio.  Topics will drift and be both spaced and frequent.</p>
