--- a/ankidecks.html
+++ b/ankidecks.html
@@ -5,7 +5,7 @@ title: anki decks
 
 <p><em>last updated: 23aug2012</em></p>
 
-<p>This is a collection of my personal anki decks.  They cover a variety of topics and are updated regularly when I've added new material.</p>
+<p>This is a collection of personal anki decks.  They cover a variety of topics and are updated regularly when I've added new material.</p>
 
 <ul>
 <li><a href="/storage/ankidecks/linguistics20aug2012">Linguistics deck</a></li>
