--- a/occupypdx.html
+++ b/occupypdx.html
@@ -10,7 +10,7 @@ description: collected raw data and survey analysis for political and demographi
 
 
 <p>On November 13th of 2011, I and several other members[^1] of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
-<img url="http://a.abcnews.go.com/images/US/gty_occupy_portland_dawn_cc_111113_wg.jpg" />
+<img src="http://a.abcnews.go.com/images/US/gty_occupy_portland_dawn_cc_111113_wg.jpg" />
 <p>Our initial survey was modeled after <a href="http://online.wsj.com/article/SB10001424052970204479504576637082965745362.html">a similar poll</a> conducted by Douglas E. Schoen of ~200 people at the Occupy Wallsteet encampment in Zuccotti Park, October 10th & 11th of 2011. <a href="/storage/OccupyPDXdata/SchoenOccupyWallStreetPoll.pdf" target="_blank">A summary of that report can be found here.</a>
 
 <p>Raw Data available in <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyDataRaw.xls" target="_blank">[XLS]</a> and <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyData.ods" target="_blank">[ODS]</a> formats.</p>
