tweaked occupy to tweak, testing ssh

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -5,6 +5,7 @@ category: experiments
 tags:
  - experiments
  - originalcontent
+ - projects
 description: collected raw data and survey analysis for political and demographic makeup of Occupy Portland 2011 encampment
 ---
 
