nootropics page spelling and grammar tweaks

--- a/_posts/2011-09-01-nootropics-dosage-map.html
+++ b/_posts/2011-09-01-nootropics-dosage-map.html
@@ -14,7 +14,7 @@ description: My recorded data from Nootropics experiment from Aug to Sept 2011
 <br />Once Daily: Vegan Multivitamin, B-Complex, 345mg DHA
 <br />Day 0 Base N-Back: avg 2.48</p>
 
-<p class="blockquote">Moral of this incomplete data: real life can and will fuck up your testing and project commitment.<br /> I ended up scraping this one halfway through (originally planned two month timeframe).  Only the first 16 days seems solid, after which N-Back testing stopped entirely and the vague numbering system just seemed insufficient to me and was abandoned.  This is here for archival purposes only.</p>
+<p class="blockquote">Moral of this incomplete data: real life can and will fuck up your testing and project commitment.<br /> I ended up scrapping this one halfway through (originally planned 2-month timeframe).  Only the first 16 days seems solid, after which N-Back testing stopped entirely and the vague numbering system just seemed insufficient to me and was abandoned.  This is here for archival purposes only.</p>
 
 <h2>Original Methodology</h2>
 
