--- a/sleep.html
+++ b/sleep.html
@@ -12,12 +12,12 @@ description: Collected sleep data for period of December 2011 to March 2012
 
 <p>My collected sleep data over the period of December 2011 to March 2012. Apparently I had a really amazing and consistent schedule back then... good times.</p>
 
-<p>Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a overly accurate depiction of my sleep, <a href="http://journals.lww.com/acsm-msse/pages/articleviewer.aspx?year=2004&issue=09000&article=00026&type=abstract" target="_blank">it still falls under the range of "acceptable reliability"<a/>, <a href="http://en.wikipedia.org/wiki/Actigraphy">the theory</a> is that one moves less in deep sleep, due to sleep paralysis.</p>
-<p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's <a href="/storage/sleepdata/sleep-export.csv">a CSV of the current data export</a>.</p>
+<p>Much is problematic about using a motion tracker to judge sleep cycles and while the data cannot be a overly accurate depiction of my sleep, it still falls <a href="http://journals.lww.com/acsm-msse/pages/articleviewer.aspx?year=2004&issue=09000&article=00026&type=abstract" target="_blank">under the range of "acceptable reliability"<a/>, <a href="http://en.wikipedia.org/wiki/Actigraphy">the theory</a> is that one moves less in deep sleep, due to sleep paralysis.</p>
+<p>Data collected with <a href="https://market.android.com/details?id=com.urbandroid.sleep" target"_blank">Sleep as Android</a> Android app. If you like playing with data, here's <a href="/storage/sleepdata/sleep-export.csv">a CSV of the last export</a>.  Parsing SaA's data is a total bitch so I also built a converter to make it more readable, you can <a href="https://github.com/theoretick">find that over on Github.</a></p>
 
 <h2>Summary</h2>
 <br />
-<img src="/storage/sleepdata/summary.png" width="65%" height="65%">
+<img src="/storage/sleepdata/summary.png" width="65%">
 <br />
 <img src="/storage/sleepdata/pattern-month.png" width="75%" height="75%">
 <br />
