--- a/sleep.html
+++ b/sleep.html
@@ -8,7 +8,7 @@ tags:
 description: Collected sleep data for period of December 2011 to March 2012
 ---
   
-<p class="blockquote">last updated March 1st, 2012</p>
+<p class="blockquote">last updated 21feb2013</p>
 
 <p>My collected sleep data over the period of December 2011 to March 2012. Apparently I had a really amazing and consistent schedule back then... good times.</p>
 
