fixed occupy footnotes link

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -10,7 +10,7 @@ description: collected raw data and survey analysis for political and demographi
 ---
 
 
-<p>On November 13th of 2011, I and several other members[^1] of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
+<p id="intro">On November 13th of 2011, I and <a href="#note1">several other members[^1]</a> of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
 
 <img src="http://a.abcnews.go.com/images/US/gty_occupy_portland_dawn_cc_111113_wg.jpg" width="75%" alt="Occupy Portland courtesy Getty Images"/>
 <br />
@@ -630,4 +630,4 @@ TOTAL: 119
 
 <br />
 <br />
-[^1]: Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong
+<p id="note1"><a href="#intro">NOTE:</a> Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong</p>
