--- a/me.html
+++ b/me.html
@@ -18,3 +18,5 @@ title: about me
 <a href="http://about.me/lucascharles" target="_blank">about.me</a>
 <br />
 <a href="http://twitter.com/theoretick" target="_blank">@theoretick</a>
+<br />
+<a href="http://github.com/theoretick" target="_blank">github stuff</a>
