large update, updated an cleaned sitemmigration page, initialized ankidecks page with link from me, and large revamp with more links for me page

--- a/ankidecks.html
+++ b/ankidecks.html
@@ -3,7 +3,7 @@ layout: default
 title: anki decks
 ---
 
-<p><em>last updated: 23aug2012</em></p>
+<p><em>last updated: 26feb2013</em></p>
 
 <p>This is a collection of personal anki decks.  They cover a variety of topics and are updated regularly when I've added new material.</p>
 
@@ -11,7 +11,8 @@ title: anki decks
 <li><a href="/storage/ankidecks/linguistics20aug2012">Linguistics deck</a></li>
 <li><a href="/storage/ankidecks/nootropics20aug2012">Nootropics deck</a></li>
 <li><a href="/storage/ankidecks/french20aug2012">French deck (very messy, all levels and vocab)</a></li>
-<li><a href="/storage/ankidecks/japanese20aug2012">Japanese deck<a/></li>
+<li><a href="/storage/ankidecks/japanese20aug2012">Japanese deck</a></li>
+<li><a href="NYTandUlyssesVocab.anki">NYT and Ulysses vocab deck (deprecated for Anki v1)</a></li>
 </ul>
 
-<p>I also recommend MeaningIsMagick's deck set, <a href="http://meaningandmagic.com/anki-decks/" target="_blank">available here.</a></p>
+<p>I can also recommend MeaningIsMagick's deck sets, <a href="http://meaningandmagic.com/anki-decks/" target="_blank">available here.</a></p>
