--- a/ankidecks.html
+++ b/ankidecks.html
@@ -8,10 +8,11 @@ title: anki decks
 <p>This is a collection of personal anki decks.  They cover a variety of topics and are updated regularly when I've added new material.</p>
 
 <ul>
-<li><a href="/storage/ankidecks/linguistics20aug2012">Linguistics deck</a></li>
-<li><a href="/storage/ankidecks/nootropics20aug2012">Nootropics deck</a></li>
-<li><a href="/storage/ankidecks/french20aug2012">French deck (very messy, all levels and vocab)</a></li>
-<li><a href="/storage/ankidecks/japanese20aug2012">Japanese deck</a></li>
+<li><a href="/storage/ankidecks/Affirmations-and-Quotations26feb2013">Affirmations and Quotations</a></li>
+<li><a href="/storage/ankidecks/Linguistics26feb2013">Linguistics deck</a></li>
+<li><a href="/storage/ankidecks/Nootropics26feb2013">Nootropics deck</a></li>
+<li><del><a href="/storage/ankidecks/french20aug2012">French deck (very messy, all levels and vocab)</a></del></li>
+<li><a href="/storage/ankidecks/Japanese-assorted26feb2013">Japanese deck</a></li>
 <li><a href="NYTandUlyssesVocab.anki">NYT and Ulysses vocab deck (deprecated for Anki v1)</a></li>
 </ul>
 
