--- a/me.html
+++ b/me.html
@@ -29,7 +29,7 @@ title: about me
 <h3>:: my stuff</h3>
 <ul id="landinglist">
     <li><a href="/listofpossessions.html" target="_blank">minimize - list of  possessions</a></li>
-    <li><a href="" target="_blank">bookshelf</a></li>
+    <li><a href="http://www.goodreads.com/review/list/5914093-lucas" target="_blank">bookshelf</a></li>
     <li><a href="https://www.evernote.com/pub/limitlesschannels/readingnotes" target="_blank">public reading notes</li>
     <li><a href="/ankidecks.html" target="_blank">anki decks</a></li>
 </ul>
